operator/pkg/gateway-api/testdata/gateway/gateway-multi-port-https/output/grpcroute-grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-route
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  hostnames:
    - api.example.test
  parentRefs:
    - name: multi-port-https
      sectionName: grpcs
  rules:
    - matches:
        - method:
            service: com.example.Grpc
            method: Serve
      backendRefs:
        - name: grpc-infra-backend-v1
          port: 8080
status:
  parents:
    - conditions:
        - lastTransitionTime: "2026-04-16T22:17:55Z"
          message: Accepted GRPCRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2026-04-16T22:17:55Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: multi-port-https
        sectionName: grpcs
