operator/pkg/gateway-api/testdata/gateway/gateway-multi-port-https/output/httproute-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  hostnames:
    - api.example.test
  parentRefs:
    - name: multi-port-https
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /web
      backendRefs:
        - name: infra-backend-v1
          port: 8080
status:
  parents:
    - conditions:
        - lastTransitionTime: "2026-04-16T22:17:55Z"
          message: Accepted HTTPRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2026-04-16T22:17:55Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: multi-port-https
        sectionName: https
